--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,31 @@
 
 
 
+	
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2406.11148">
+<img src="aimerykong_files/SWAT.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>Few-Shot Recognition via Stage-Wise Augmented Finetuning</b></a>
+<br>
+T. Liu, H. Zhang, S. Parashar, S. Kong
+<br>
+In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
+[<a href="https://tian1327.github.io/SWAT/">website</a>] 
+[<a href="https://arxiv.org/abs/2406.11148">paper</a>] 
+[<a href="https://github.com/tian1327/SWAT">code</a>]
+<br>
+</td>	
+
+
+
+
+	
+
+
 
 
 <tr>
@@ -252,26 +277,6 @@ In ECCV, 2024 (<font color=ff3399>oral presentation</font>)<br>
 [<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">github</a>]
 <br>
 </td>
-
-
-	
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2406.11148">
-<img src="aimerykong_files/SWAT.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="./"><b>Few-Shot Recognition via Stage-Wise Augmented Finetuning</b></a>
-<br>
-T. Liu, H. Zhang, S. Parashar, S. Kong
-<br>
-<a href="https://arxiv.org/abs/2406.11148">arXiv:2406.11148</a>, 2024<br>
-[<a href="https://tian1327.github.io/SWAT/">website</a>] 
-[<a href="https://arxiv.org/abs/2406.11148">paper</a>] 
-[<a href="https://github.com/tian1327/SWAT">code</a>]
-<br>
-</td>	
 
 
 
