--- a/publication.html
+++ b/publication.html
@@ -51,7 +51,7 @@
 </a><br>
 </td>
 <td>
-<a href="./"><b>Few-Shot Recognition via Stage-Wise Augmented Finetuning</b></a>
+<a href="https://arxiv.org/abs/2406.11148"><b>Few-Shot Recognition via Stage-Wise Augmented Finetuning</b></a>
 <br>
 T. Liu, H. Zhang, S. Parashar, S. Kong
 <br>
@@ -62,6 +62,29 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 <br>
 </td>	
 
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="./">
+<img src="aimerykong_files/IDOW_logo.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>Solving Instance Detection from an Open-World Perspective</b></a>
+<br>
+Q. Shen*, Y. Zhao*, N. Kwon, J. Kim, Y. Li, S. Kong
+<br>
+In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
+<br>
+[github]
+[paper]
+[<a href="https://drive.google.com/drive/folders/1rIRTtqKJGCTifcqJFSVvFshRb-sB0OzP?usp=sharing">dataset</a>]
+<br>
+</td>
 
 
 
