--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <li>
 <p>
 Congratulations to <a href="http://www.nicholasmilef.com/">Nick Milef</a> on the successful PhD defense 
-	and the new position as a Research Scientist at Meta</a>! (2/11/2025)
+	and the new position as a Research Scientist at Meta <img src="./aimerykong_files/meta-logo.jpg", height="30"></a>! (2/11/2025)
 </a>
 </li>
 
