--- a/index.html
+++ b/index.html
@@ -158,10 +158,32 @@
 
 <ul style="font-size:15px;font-family:Times;line-height:20px">
 
+
+
+
+<li>
+<p>
+Congratulations to  <a href="https://tian1327.github.io/">Tian</a>, <a href="https://openreview.net/profile?id=~Huixin_Zhang1">Huixin</a> and <a href="https://shubhamprshr27.github.io/">Shubham</a> on the <a href="https://cvpr.thecvf.com/"  target="_blank">CVPR'25
+<img src="./aimerykong_files/cvpr2025_logo.jpg", height="35"></a> 
+	paper "<a href="https://tian1327.github.io/SWAT/"  target="_blank">Few-Shot Recognition via Stage-Wise Augmented Finetuning</a>"! (2/27/2025)
+</a>
+</li>
+
+
+<li>
+<p>
+Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a>, <a href="https://shenqq377.github.io/">Qianqian</a> and <a href="https://nahyunkwon.github.io/">Nahyun</a> on the <a href="https://cvpr.thecvf.com/"  target="_blank">CVPR'25
+<img src="./aimerykong_files/cvpr2025_logo.jpg", height="35"></a> 
+	paper "Solving Instance Detection from an Open-World Perspective"! (2/27/2025)
+</a>
+</li>
+
+
+	
 <li>
 <p>
 Congratulations to <a href="http://www.nicholasmilef.com/">Nick Milef</a> on the successful PhD defense 
-	and the new position as a Research Scientist at Meta <img src="./aimerykong_files/meta-logo.jpg", height="30"></a>! (2/11/2025)
+	and the new position as a Research Scientist at Meta <img src="./aimerykong_files/meta-logo.jpg", height="20"></a>! (2/11/2025)
 </a>
 </li>
 
