--- a/group.html
+++ b/group.html
@@ -46,6 +46,7 @@
 		<li><a href="./">Anwesha Basu</a> (MS at TAMU)</li>
 		<li><a href="./">Kitty Kaiqi Su</a> (MS at UMacau)</li>	
 		<li><a href="./">Hou Un Lei</a> (MS at UMacau)</li>
+		<li><a href="./">Garfield Siyun Ke</a> (MS at UMacau)</li>
 		<li><a href="https://github.com/Ezharjan">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>		
 		
 
