--- a/group.html
+++ b/group.html
@@ -36,7 +36,7 @@
 		<li><a href="https://tian1327.github.io/">Tian Liu</a> (PhD at TAMU)</li>
 		<li><a href="https://openreview.net/profile?id=~Huixin_Zhang1">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="https://scholar.google.com/citations?user=eJ9-T9sAAAAJ&hl=zh-CN">Tong Wang</a> (PhD at UMacau)</li>
-		<li><a href="./">Hanxin Wang</a> (PhD at UMacau)</li>
+		<li><a href="https://openreview.net/profile?id=~Hanxin_Wang2">Hanxin Wang</a> (PhD at UMacau)</li>
 		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU,  co-advised by Reza Langari)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
@@ -47,7 +47,7 @@
 		<li><a href="./">Kitty Kaiqi Su</a> (MS at UMacau)</li>	
 		<li><a href="./">Hou Un Lei</a> (MS at UMacau)</li>
 		<li><a href="./">Garfield Siyun Ke</a> (MS at UMacau)</li>
-		<li><a href="https://github.com/Ezharjan">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>		
+		<li><a href="https://ezharjan.github.io/">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>		
 		
 
 		<br>
