--- a/group.html
+++ b/group.html
@@ -32,7 +32,7 @@
 	
 <h4>Graduate Students (advisees and mentees)</h4>
 	<ul>
-		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU)</li>
+		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU, joining Meta as a Research Scientist)</li>
 		<li><a href="https://tian1327.github.io/">Tian Liu</a> (PhD at TAMU)</li>
 		<li><a href="https://openreview.net/profile?id=~Huixin_Zhang1">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="https://scholar.google.com/citations?user=eJ9-T9sAAAAJ&hl=zh-CN">Tong Wang</a> (PhD at UMacau)</li>
