--- a/publication.html
+++ b/publication.html
@@ -79,7 +79,7 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 Q. Shen*, Y. Zhao*, N. Kwon, J. Kim, Y. Li, S. Kong
 <br>
 In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
-[github]
+[<a href="https://shenqq377.github.io/IDOW/">website</a>]
 [paper]
 [<a href="https://drive.google.com/drive/folders/1rIRTtqKJGCTifcqJFSVvFshRb-sB0OzP?usp=sharing">dataset</a>]
 <br>
