--- a/publication.html
+++ b/publication.html
@@ -69,7 +69,7 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 
 <tr>
 <td width="35%" height=150>
-<a href="./">
+<a href="https://arxiv.org/abs/2503.00359">
 <img src="aimerykong_files/IDOW_logo.jpg" height="120"  border="0">
 </a><br>
 </td>
@@ -80,7 +80,7 @@ Q. Shen*, Y. Zhao*, N. Kwon, J. Kim, Y. Li, S. Kong
 <br>
 In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 [<a href="https://shenqq377.github.io/IDOW/">website</a>]
-[paper]
+[<a href="https://arxiv.org/abs/2503.00359">paper</a>]
 [<a href="https://drive.google.com/drive/folders/1rIRTtqKJGCTifcqJFSVvFshRb-sB0OzP?usp=sharing">dataset</a>]
 <br>
 </td>
