--- a/publication.html
+++ b/publication.html
@@ -173,6 +173,23 @@ In WACV, 2025<br>
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://www.sciencedirect.com/science/article/pii/S0957417425005871">
+<img src="aimerykong_files/referring-expression.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.sciencedirect.com/science/article/pii/S0957417425005871"><b>Referring Expression Comprehension in semi-structured human–robot interaction</b></a>
+<br>
+T Jin, Q Meng, G Zhang, Q Huang, F Guo, S Kong, W Song, J Zhu, J Gu
+<br>
+Expert Systems with Applications, 2025<br>
+[<a href="https://www.sciencedirect.com/science/article/pii/S0957417425005871">paper</a>]
+<br>
+</td>
+	
+
 	
 
 <tr>
