--- a/publication.html
+++ b/publication.html
@@ -120,7 +120,7 @@ preprint, 2025
 <td>
 <a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1"><b>Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</b></a>
 <br>
-Jennifer T. Feng, Sandeep Puthanveetil Satheesan, Shu Kong, Timme H. Donders, and Surangi W. Punyasena
+J. T. Feng, S. P. Satheesan, S. Kong, T. H. Donders, and S. W. Punyasena
 <br>
 preprint, 2025
 <br>
