--- a/publication.html
+++ b/publication.html
@@ -15,17 +15,16 @@
 <body>
 
 	<div class="my-container">
-		<h1> Shu Kong </h1>
-		<span> Assistant Professor; University of Macau <a href="https://github.com/aimerykong">[GitHub]</a>  <a href="http://scholar.google.com/citations?user=sm9FdLoAAAAJ&hl=en">[Google Scholar]</a> </span>
-
+		<h1> Computer Vision Lab </h1>
+		<span>research in computer vision, machine learning, robotics, NLP, HCI, graphics, interdisciplinary research (e.g., plant biology, paleoecology, psychology, special education etc.)</span>
+		<!--span>research in computer vision and its interactions with other fields (e.g.,machine learning, robotics, NLP, HCI, and graphics), applications(e.g., AR/VR, self-driving, etc.)  and other interdisciplines (e.g., biology, paleoecology, psychology, special education, etc.) </span-->
+		
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
 			<a href="index.html" class="btn btn-default" role="button">Home</a>
 			<a href="publication.html" class="btn btn-default" role="button">Publication</a>
 			<a href="group.html" class="btn btn-default" role="button">Group</a>
 			<a href="contact.html" class="btn btn-default" role="button">Contact</a>
     	</div>
-
-
 
 <div class="content">
 <div class="row">
