--- a/publication.html
+++ b/publication.html
@@ -1514,6 +1514,15 @@ Pattern Recognition Letters, 2012
 <ul>
 
 
+<li>
+<div class="publication">
+<p> A. Madan, N. Peri, S. Kong, D. Ramanan, 
+	"<font color=#AF7817>Revisiting Few-Shot Object Detection with Vision-Language Models</font>", 
+	<em><a href="https://sites.google.com/view/eval-fomo-24/home">ECCV 2024 Workshop EVAL-FoMo </a></em>, Milano, Italy, September 2024.
+<br>
+</p>
+</div>
+</li>
 	
 <li>
 <div class="publication">
