--- a/index.html
+++ b/index.html
@@ -154,12 +154,21 @@
 
 
 
-<h3 style="font-size:20px;font-family:Times">Research Updates</h3>
+<h3 style="font-size:20px;font-family:Times">Updates</h3>
 
 <ul style="font-size:15px;font-family:Times;line-height:20px">
 
 
 
+
+<li>
+<p>
+Presented at <a href="https://wacv2025.thecvf.com/">WACV'25</a> Workshop on <a href="https://sites.google.com/ucr.edu/cooolsworkshop/home">Out-of-Label Hazards in Autonomous Driving</a>, 
+	titled "The Concept Misalignment between Experts and AI, from Data Labeling to Data Versioning" [<a href="./aimerykong_files/talk_WACV_COOOL_20250304.pdf">slides</a>]! (3/4/2025)
+</a>
+</li>
+
+	
 
 <li>
 <p>
