--- a/index.html
+++ b/index.html
@@ -205,6 +205,15 @@ Congratulations to <a href="https://www.linkedin.com/in/marc-elie-adaime-8b75627
 </a>
 </li>
 
+
+<li>
+<p>
+Presented at <a href="https://accv2024.org/">ACCV'24</a> Workshop on <a href="https://insdet.github.io/">Object Instance Detection</a>, 
+	titled "Instance Detection and Tracking in the Open World" [<a href="./aimerykong_files/presentation_ACCV2024_InstanceDetection.pdf">slides</a>]! (12/9/2024)
+</a>
+</li>
+
+	
 <li>
 <p>
 Congratulations to <a href="https://www.linkedin.com/in/runzhi-wang">Runzhi</a> on the
