--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<link rel="icon" href="aimerykong_files/profile2.png" type="img/jpg">
 </head>
 
+
+
+
+	
 	
 	
 <body>
@@ -83,6 +87,15 @@
 </div>
 
 
+
+		
+
+<h3 style="font-size:20px;font-family:Times"><font color="red">Call for Participation</font></h3>
+<ul style="font-size:15px;font-family:Times;line-height:18px">	
+	<li>
+	<a href="https://eval.ai/web/challenges/challenge-page/2459/overview">Foundational Few-Shot Object Detection Challenge v2 @VPLOW joint with CVPR'25</a>
+	</li>
+</ul>
 
 		
 <h3 style="font-size:20px;font-family:Times">Links</h3>
