--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
 	<li>
 	<a href="https://eval.ai/web/challenges/challenge-page/2459/overview">Foundational Few-Shot Object Detection Challenge v2 @VPLOW joint with CVPR'25</a>
 	</li>
+	
+	<li>
+	<a href="https://eval.ai/web/challenges/challenge-page/2472/overview">The 2nd Challenge of Object Instance Detection @ VPLOW joint with CVPR'25</a>
+	</li>
 </ul>
 
 		
