--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 <h3 style="font-size:20px;font-family:Times"><font color="red">Call for Participation</font></h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
-	<a href="https://eval.ai/web/challenges/challenge-page/2459/overview">Foundational Few-Shot Object Detection Challenge v2 @VPLOW joint with CVPR'25</a>
+	<a href="https://eval.ai/web/challenges/challenge-page/2459/overview">The 2nd Challenge of Foundational Few-Shot Object Detection @ VPLOW jointly with CVPR'25</a>
 	</li>
 	
 	<li>
-	<a href="https://eval.ai/web/challenges/challenge-page/2472/overview">The 2nd Challenge of Object Instance Detection @ VPLOW joint with CVPR'25</a>
+	<a href="https://eval.ai/web/challenges/challenge-page/2478/overview">The 2nd Challenge of Object Instance Detection @ VPLOW jointly with CVPR'25</a>
 	</li>
 </ul>
 
