--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 	<div class="my-container">
 		<h1> Shu Kong </h1>
-		<span> Assistant Professor; University of Macau <a href="https://github.com/aimerykong">[GitHub]</a>  <a href="http://scholar.google.com/citations?user=sm9FdLoAAAAJ&hl=en">[Google Scholar]</a> </span>
+		<span> Assistant Professor; University of Macau <a href="https://github.com/aimerykong"  target="_blank>[GitHub]</a>  <a href="http://scholar.google.com/citations?user=sm9FdLoAAAAJ&hl=en"  target="_blank>[Google Scholar]</a> </span>
 
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
 			<a href="index.html" class="btn btn-default" role="button">Home</a>
@@ -36,24 +36,24 @@
 				</div>
 				<div class="col-sm-10">
         <p style="font-size:16px;font-family:Times"> I am on the faculty of 
-		<a href="https://www.fst.um.edu.mo/people/skong/">FST</a>,  
-		<a href="https://www.um.edu.mo/">University of Macau</a>, 
+		<a href="https://www.fst.um.edu.mo/people/skong/"  target="_blank>FST</a>,  
+		<a href="https://www.um.edu.mo/"  target="_blank>University of Macau</a>, 
 		leading the <a href="group.html">Computer Vision Lab</a>. 
-		I was an Assistant Professor in the Department of <a href="https://engineering.tamu.edu/cse">CSE</a> at 
-		<a href="https://www.tamu.edu/">Texas A&M University</a>.
-		  I did my postdoc training at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, <a href="https://www.cmu.edu/">CMU</a>, 
+		I was an Assistant Professor in the Department of <a href="https://engineering.tamu.edu/cse"  target="_blank>CSE</a> at 
+		<a href="https://www.tamu.edu/"  target="_blank>Texas A&M University</a>.
+		  I did my postdoc training at the <a href="https://www.ri.cmu.edu/"  target="_blank>Robotics Institute</a>, <a href="https://www.cmu.edu/"  target="_blank>CMU</a>, 
 		  working with <a href="http://www.cs.cmu.edu/~deva/">Deva Ramanan</a>. 
-		  I received my PhD from <a href="http://www.uci.edu/">UC-Irvine</a>, working with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>.
+		  I received my PhD from <a href="http://www.uci.edu/"  target="_blank>UC-Irvine</a>, working with <a href="http://www.ics.uci.edu/~fowlkes/"  target="_blank>Charless Fowlkes</a>.
 	</p>
 	
 	<p style="font-size:16px;font-family:Times">
 		My research lies in <strong>Computer Vision</strong> and its interactions with other fields (e.g., ML, NLP, HCI, robotics, and graphics), broad
 		applications (e.g., AR/VR, autonomous driving, etc.), and diverse disciplines (e.g., biology, paleoecology, psychology, special education, etc.). 
-		My current research focuses on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
-		My previous paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
+		My current research focuses on <a href="https://vplow.github.io"  target="_blank><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
+		My previous paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939"  target="_blank>Best Paper / Marr Prize at ICCV 2021</a>.
 		My previous work that applied AI to interdisciplinary research built a high-throughput pollen analysis system,
 		which was featured by the National Science Foundation that 
-		“<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
+		“<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research"  target="_blank>opens a new era of fossil pollen research</a>”.
 	</p>
 
 
@@ -69,10 +69,10 @@
 					
 	<p style="font-size:16px;font-family:Times">
 		<font color="#8B0000">
-			I am actively looking for self-motivated PhD students at <a href="https://grs.um.edu.mo/index.php/prospective-students/doctoral-degrees-programmes/">CIS, FST, University of Macau</a>.
+			I am actively looking for self-motivated PhD students at <a href="https://grs.um.edu.mo/index.php/prospective-students/doctoral-degrees-programmes/"  target="_blank>CIS, FST, University of Macau</a>.
 			PhD students will be fully funded with fellowships.
 		</font>
-			I am NOT actively looking for PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions/index.html">CSE, TAMU</a>.
+			I am NOT actively looking for PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions/index.html"  target="_blank>CSE, TAMU</a>.
 		
 	</p>
 
@@ -93,11 +93,11 @@
 <h3 style="font-size:20px;font-family:Times"><font color="red">Call for Participation</font></h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
-	<a href="https://eval.ai/web/challenges/challenge-page/2459/overview">The 2nd Challenge of Foundational Few-Shot Object Detection @ VPLOW jointly with CVPR'25</a>
+	<a href="https://eval.ai/web/challenges/challenge-page/2459/overview"  target="_blank>The 2nd Challenge of Foundational Few-Shot Object Detection @ VPLOW jointly with CVPR'25</a>
 	</li>
 	
 	<li>
-	<a href="https://eval.ai/web/challenges/challenge-page/2478/overview">The 2nd Challenge of Object Instance Detection @ VPLOW jointly with CVPR'25</a>
+	<a href="https://eval.ai/web/challenges/challenge-page/2478/overview"  target="_blank>The 2nd Challenge of Object Instance Detection @ VPLOW jointly with CVPR'25</a>
 	</li>
 </ul>
 
@@ -105,25 +105,25 @@
 <h3 style="font-size:20px;font-family:Times">Links</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
-	<a href="https://vplow.github.io/vplow_5th.html">The 5th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'25</a>
+	<a href="https://vplow.github.io/vplow_5th.html"  target="_blank>The 5th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'25</a>
 	</li>
 	<li>
-	<a href="https://vplow.github.io/vplow_4th.html">The 4th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'24</a>
+	<a href="https://vplow.github.io/vplow_4th.html"  target="_blank>The 4th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'24</a>
 	</li>
 	<li>
-	<a href="https://vplow.github.io/vplow_3rd.html">The 3rd Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'23</a>
+	<a href="https://vplow.github.io/vplow_3rd.html"  target="_blank>The 3rd Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'23</a>
 	</li>
 	<li>
-	<a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/">The 2nd Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'23</a>
+	<a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/"  target="_blank>The 2nd Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'23</a>
 	</li>
 	<li>
-	<a href="http://vplow.github.io/vplow.html">The 2nd Open World Vision Workshop: Visual Perception and Learning in an Open World (VPLOW) at CVPR'22</a>
+	<a href="http://vplow.github.io/vplow.html"  target="_blank>The 2nd Open World Vision Workshop: Visual Perception and Learning in an Open World (VPLOW) at CVPR'22</a>
 	</li>
 	<li>
-	<a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop/">The 1st Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'22</a>
+	<a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop/"  target="_blank>The 1st Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'22</a>
 	</li>
 	<li>
-	<a href="http://vplow.github.io/open-world-vision.html">The 1st Open World Vision Workshop at CVPR'21</a>
+	<a href="http://vplow.github.io/open-world-vision.html"  target="_blank>The 1st Open World Vision Workshop at CVPR'21</a>
 	</li>
 </ul>
 
@@ -131,13 +131,13 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
-		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2024-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf">syllabus</a>] (Spring 2025, UMacau)
+		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2024-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank>syllabus</a>] (Spring 2025, UMacau)
 	</li>
 	<li>
-		[CISC3027] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf">syllabus</a>] (Fall 2024, UMacau)
+		[CISC3027] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf"  target="_blank>syllabus</a>] (Fall 2024, UMacau)
 	</li>
 	<li>
-		[CISC7014] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf">syllabus</a>] (Spring 2024, UMacau)
+		[CISC7014] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf"  target="_blank>syllabus</a>] (Spring 2024, UMacau)
 	</li>
 	<li>
 		[CISC3027] Visual Perception and Learning in the Open World (Fall 2023, UMacau)
@@ -149,15 +149,15 @@
 
 
 		
-<h3 style="font-size:20px;font-family:Times">Professional activities</h3>
+<h3 style="font-size:20px;font-family:Times">Professional services</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
-	<li>	Area Chair at <a href="https://neurips.cc/Conferences/2024">NeurIPS'24</a>, <a href="https://neurips.cc/">NeurIPS'25</a>;
+	<li>	Area Chair at <a href="https://neurips.cc/Conferences/2024"  target="_blank>NeurIPS'24</a>, <a href="https://neurips.cc/"  target="_blank>NeurIPS'25</a>;
 	</li>
-	<li>	<a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>;
+	<li>	<a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank>Demo Chair at CVPR'24</a>;
 	</li>
-	<li>	organizer: <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR & WACV</a>; 
+	<li>	organizer: <a href="https://vplow.github.io/"  target="_blank>Open-World Vision workshops at CVPR & WACV</a>; 
 	</li>
-	<li>	<a href="https://www.sciencedirect.com/journal/pattern-recognition">Associate Editor: Pattern Recognition</a>;
+	<li>	<a href="https://www.sciencedirect.com/journal/pattern-recognition"  target="_blank>Associate Editor: Pattern Recognition</a>;
 	</li>
 	<li>	Panalist: NSF GRFP
 	</li>	
@@ -180,8 +180,8 @@
 
 <li>
 <p>
-Presented at <a href="https://wacv2025.thecvf.com/">WACV'25</a> Workshop on <a href="https://sites.google.com/ucr.edu/cooolsworkshop/home">Out-of-Label Hazards in Autonomous Driving</a>, 
-	titled "The Concept Misalignment between Experts and AI, from Data Labeling to Data Versioning" [<a href="./aimerykong_files/talk_WACV_COOOL_20250304.pdf">slides</a>]! (3/4/2025)
+Presented at <a href="https://wacv2025.thecvf.com/"  target="_blank>WACV'25</a> Workshop on <a href="https://sites.google.com/ucr.edu/cooolsworkshop/home"  target="_blank>Out-of-Label Hazards in Autonomous Driving</a>, 
+	titled "The Concept Misalignment between Experts and AI, from Data Labeling to Data Versioning" [<a href="./aimerykong_files/talk_WACV_COOOL_20250304.pdf"  target="_blank>slides</a>]! (3/4/2025)
 </a>
 </li>
 
