--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Congratulations to  <a href="https://tian1327.github.io/">Tian</a>, <a href="htt
 <p>
 Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a>, <a href="https://shenqq377.github.io/">Qianqian</a> and <a href="https://nahyunkwon.github.io/">Nahyun</a> on the <a href="https://cvpr.thecvf.com/"  target="_blank">CVPR'25
 <img src="./aimerykong_files/cvpr2025_logo.jpg", height="25"></a> 
-	paper "<a href="https://arxiv.org/abs/2503.00359" target="_blank">Solving Instance Detection from an Open-World Perspective</a>"! (2/27/2025)
+	paper "<a href="https://shenqq377.github.io/IDOW/" target="_blank">Solving Instance Detection from an Open-World Perspective</a>"! (2/27/2025)
 </a>
 </li>
 
