--- a/publication.html
+++ b/publication.html
@@ -250,7 +250,9 @@ preprint at bioRxiv, 2024<br>
 Y. Ma*, N. Peri*, S. Wei, A. Dave, W. Hua,  Y. Li,  D. Ramanan, S. Kong
 <br>
 arXiv:2312.10986, 2024<br>
+[<a href="https://mayechi.github.io/lt3d-lf-io/">webpage</a>]
 [<a href="https://arxiv.org/abs/2312.10986">paper</a>]
+[<a href="https://github.com/mayechi/lt3d-lf">code</a>]
 <br>
 </td>
 
