--- a/publication.html
+++ b/publication.html
@@ -45,12 +45,12 @@
 	
 <tr>
 <td width="35%" height=150>
-<a href="https://arxiv.org/abs/2406.11148">
+<a href="https://tian1327.github.io/SWAT/">
 <img src="aimerykong_files/SWAT.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2406.11148"><b>Few-Shot Recognition via Stage-Wise Augmented Finetuning</b></a>
+<a href="https://tian1327.github.io/SWAT/"><b>Few-Shot Recognition via Stage-Wise Augmented Finetuning</b></a>
 <br>
 T. Liu, H. Zhang, S. Parashar, S. Kong
 <br>
@@ -58,6 +58,7 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 [<a href="https://tian1327.github.io/SWAT/">website</a>] 
 [<a href="https://arxiv.org/abs/2406.11148">paper</a>] 
 [<a href="https://github.com/tian1327/SWAT">code</a>]
+[<a href="https://github.com/tian1327/SWAT/blob/master/retrieval/RETRIEVAL.md">data</a>]
 <br>
 </td>	
 
@@ -68,18 +69,19 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 
 <tr>
 <td width="35%" height=150>
-<a href="https://arxiv.org/abs/2503.00359">
+<a href="https://shenqq377.github.io/IDOW/">
 <img src="aimerykong_files/IDOW_logo.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="./"><b>Solving Instance Detection from an Open-World Perspective</b></a>
+<a href="https://shenqq377.github.io/IDOW/"><b>Solving Instance Detection from an Open-World Perspective</b></a>
 <br>
 Q. Shen*, Y. Zhao*, N. Kwon, J. Kim, Y. Li, S. Kong
 <br>
 In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 [<a href="https://shenqq377.github.io/IDOW/">website</a>]
 [<a href="https://arxiv.org/abs/2503.00359">paper</a>]
+[<a href="https://github.com/shenqq377/IDOW">code</a>]
 [<a href="https://drive.google.com/drive/folders/1rIRTtqKJGCTifcqJFSVvFshRb-sB0OzP?usp=sharing">dataset</a>]
 <br>
 </td>
@@ -206,6 +208,7 @@ A. Madan<sup>*</sup>, N. Peri<sup>*</sup>, S. Kong<sup>#</sup>, D. Ramanan<sup>#
 In NeurIPS Datasets and Benchmarks, 2024<br>
 [<a href="https://arxiv.org/abs/2312.14494">paper</a>]
 [<a href="https://github.com/anishmadan23/foundational_fsod">code</a>]
+[<a href="https://neurips.cc/media/neurips-2024/Slides/97860.pdf">poster</a>]
 [<a href="https://eval.ai/web/challenges/challenge-page/2270/overview">challenge</a>]
 <br>
 </td>
