--- a/publication.html
+++ b/publication.html
@@ -242,15 +242,15 @@ preprint at bioRxiv, 2024<br>
 	
 <tr>
 <td width="35%" height=150>
-<a href="https://arxiv.org/abs/2312.10986">
+<a href="https://mayechi.github.io/lt3d-lf-io/">
 <img src="aimerykong_files/LT3D-lateFusion.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2312.10986"><b>Long-Tailed 3D Detection via Multi-Modal Late-Fusion
+<a href="https://mayechi.github.io/lt3d-lf-io/"><b>Long-Tailed 3D Detection via Multi-Modal Late-Fusion
 </b></a>
 <br>
-Y. Ma*, N. Peri*, S. Wei, A. Dave, W. Hua,  Y. Li,  D. Ramanan, S. Kong
+Y. Ma*, N. Peri*, A. Dave, W. Hua, D. Ramanan, S. Kong
 <br>
 arXiv:2312.10986, 2024<br>
 [<a href="https://mayechi.github.io/lt3d-lf-io/">webpage</a>]
