--- a/group.html
+++ b/group.html
@@ -70,6 +70,7 @@
 		<li><a href="https://www.linkedin.com/in/zelinye/">Zelin Ye</a> (Master at CMU; now Engineer at CMU)</li>
 		<li><a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">Jeet Kanjani</a> (MSCV at CMU, now at Amazon)</li>
 		<li><a href="https://www.linkedin.com/in/shubham-gupta94/">Shubham Gupta</a> (MSCV at CMU, now at Apple)</li>
+		<li><a href="https://cathalye.github.io/">Chinmayee Athalye</a> (MS at UCI, now at UPenn)</li>
 	</ul>
 	
 <h4>Undergraduate Students</h4>
