--- a/publication.html
+++ b/publication.html
@@ -42,6 +42,28 @@
 
 
 
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1">
+<img src="aimerykong_files/icon_newPhytologist202501.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1"><b>Pollen Morphology, Deep Learning, Phylogenetics, and the Evolution of Environmental Adaptations in Podocarpus</b></a>
+<br>
+M-E Adaimé, M. A. Urban,  S. Kong,  C. Jaramillo,  S. W. Punyasena
+<br>
+New Phytologist, 2025
+<br>
+[<a href="https://doi.org/10.1101/2025.01.07.631571">paper</a>]
+<br>
+</td>
+
+	
+
 	
 <tr>
 <td width="35%" height=150>
@@ -90,25 +112,6 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 
 	
 
-
-
-
-<tr>
-<td width="35%" height=150>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1">
-<img src="aimerykong_files/icon_newPhytologist202501.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1"><b>Pollen Morphology, Deep Learning, Phylogenetics, and the Evolution of Environmental Adaptations in Podocarpus</b></a>
-<br>
-M-E Adaimé, M. A. Urban,  S. Kong,  C. Jaramillo,  S. W. Punyasena
-<br>
-preprint, 2025
-<br>
-[<a href="https://doi.org/10.1101/2025.01.07.631571">paper</a>]
-<br>
-</td>
 
 
 	
