--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@
 <ul style="font-size:15px;font-family:Times;line-height:20px">
 
 
+<li>
+<p>
+Congratulations to <a href="https://www.linkedin.com/in/marc-elie-adaime-8b756270/">Marc-Elie</a> on the <a href="https://nph.onlinelibrary.wiley.com/journal/14698137"  target="_blank">New Phytologist 
+<img src="https://nph.onlinelibrary.wiley.com/pb-assets/journal-banners/14698137-1527608518210.jpg", height="20"></a> 
+	paper "<a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2"  target="_blank">Pollen Morphology, Deep Learning, Phylogenetics, and the Evolution of Environmental Adaptations in Podocarpus</a>"! (5/4/2025)
+</a>
+</li>
+
+	
 
 
 <li>
