--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,29 @@
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1">
+<img src="aimerykong_files/thumbnail_pollenDet.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1"><b>Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</b></a>
+<br>
+J. T. Feng, S. P. Satheesan, S. Kong, T. H. Donders, and S. W. Punyasena
+<br>
+Paleobiology, 2025
+<br>
+[<a href="https://doi.org/10.1101/2025.01.05.631390">paper</a>]
+[<a href="https://github.com/paleopollen/ndpi-tile-cropper-cli">code for tile cropping</a>]
+[<a href="https://github.com/paleopollen/pollen-detection-cli">code for pollen detection</a>]
+[<a href="https://github.com/paleopollen/open_world_pollen_detection">code of Jupyter Notebook</a>]
+[<a href="https://databank.illinois.edu/datasets/IDB-5855228?code=xjXBDHYYMDtcHgN1gqQWaYOb2NT_YbUrbfKpBeZkYWc">data</a>]
+<br>
+</td>
+
+
+	
 
 
 <tr>
@@ -115,26 +138,6 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 
 
 	
-<tr>
-<td width="35%" height=150>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1">
-<img src="aimerykong_files/thumbnail_pollenDet.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1"><b>Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</b></a>
-<br>
-J. T. Feng, S. P. Satheesan, S. Kong, T. H. Donders, and S. W. Punyasena
-<br>
-preprint, 2025
-<br>
-[<a href="https://doi.org/10.1101/2025.01.05.631390">paper</a>]
-[<a href="https://github.com/paleopollen/ndpi-tile-cropper-cli">code for tile cropping</a>]
-[<a href="https://github.com/paleopollen/pollen-detection-cli">code for pollen detection</a>]
-[<a href="https://github.com/paleopollen/open_world_pollen_detection">code of Jupyter Notebook</a>]
-[<a href="https://databank.illinois.edu/datasets/IDB-5855228?code=xjXBDHYYMDtcHgN1gqQWaYOb2NT_YbUrbfKpBeZkYWc">data</a>]
-<br>
-</td>
 
 	
 
