--- a/index.html
+++ b/index.html
@@ -178,13 +178,21 @@
 
 <li>
 <p>
+Congratulations to <a href="https://anthropology.sas.upenn.edu/people/jennifer-feng/">Jennifer</a> on the <a href="https://www.cambridge.org/core/journals/paleobiology"  target="_blank">Paleobiology
+<img src="https://www.cambridge.org/core/services/aop-file-manager/file/567a62235cefc91d0c2d4094/Paleontological-Society-Logo-680x460px-1-.jpg", height="20"></a> 
+	paper "<a href="https://doi.org/10.1101/2025.01.05.631390"  target="_blank">Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</a>"! (5/15/2025)
+</a>
+</li>
+
+	
+
+<li>
+<p>
 Congratulations to <a href="https://www.linkedin.com/in/marc-elie-adaime-8b756270/">Marc-Elie</a> on the <a href="https://nph.onlinelibrary.wiley.com/journal/14698137"  target="_blank">New Phytologist 
 <img src="https://nph.onlinelibrary.wiley.com/pb-assets/journal-banners/14698137-1527608518210.jpg", height="20"></a> 
 	paper "<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1"  target="_blank">Pollen Morphology, Deep Learning, Phylogenetics, and the Evolution of Environmental Adaptations in Podocarpus</a>"! (5/4/2025)
 </a>
 </li>
-
-	
 
 
 <li>
