--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a>, <a href="
 	
 <li>
 <p>
-Congratulations to <a href="http://www.nicholasmilef.com/">Nick Milef</a> on the successful PhD defense 
+Congratulations to <a href="http://www.nicholasmilef.com/">Dr. Nick Milef</a> on the successful PhD defense 
 	and the new position as a Research Scientist at Meta <img src="./aimerykong_files/meta-logo.jpg", height="20"></a>! (2/11/2025)
 </a>
 </li>
