--- a/group.html
+++ b/group.html
@@ -32,13 +32,12 @@
 	
 <h4>Graduate Students (advisees and mentees)</h4>
 	<ul>
-		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU, joining Meta as a Research Scientist)</li>
+		
 		<li><a href="https://tian1327.github.io/">Tian Liu</a> (PhD at TAMU)</li>
-		<li><a href="https://openreview.net/profile?id=~Huixin_Zhang1">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="https://scholar.google.com/citations?user=eJ9-T9sAAAAJ&hl=zh-CN">Tong Wang</a> (PhD at UMacau)</li>
 		<li><a href="https://openreview.net/profile?id=~Hanxin_Wang2">Hanxin Wang</a> (PhD at UMacau)</li>
-		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
-		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU,  co-advised by Reza Langari)</li>
+		<li><a href="./">Di Wu</a> (PhD at UMacau)</li>
+		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>		
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
@@ -51,6 +50,9 @@
 		
 
 		<br>
+		<li><a href="https://openreview.net/profile?id=~Huixin_Zhang1">Huixin Zhang</a> (PhD at TAMU)</li>
+		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU,  co-advised by Reza Langari)</li>
+		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU, now Research Scientist at Meta)</li>
 		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena; now Research Fellow at Smithsonian Institution)</li>		
 		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan)</li>
 		<li><a href="https://shubhamprshr27.github.io/">Shubham Parashar</a> (MS at TAMU; now PhD student at TAMU)</li>
@@ -75,9 +77,9 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li>Joanne Liu (TAMU, co-advised by Jeeeun Kim)</li>
-		<li>Yupeng Tong  (UMacau)</li>
-		<li>Yoger Un Lok Chen (UMacau; now MS student at Tsinghua)</li>
+		<li><a href="https://www.linkedin.com/in/joanneliu88/">Joanne Liu</a> (TAMU, co-advised by Jeeeun Kim)</li>
+		<li>Yupeng Tong (UMacau)</li>
+		<li><a href="https://yogerchen.github.io/">Yoger Un Lok Chen</a> (UMacau; now MS student at Tsinghua)</li>
 		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
 		<li>Anna Yuting Cao (UMacau; now MS at HKU)</li>
 		<li>Bruce Zhuxuan Chen (UMacau; now MS at PolyU)</li>
@@ -88,7 +90,7 @@
 	
 <h4>High-School Students</h4>
 	<ul>
-		<li><a href="./">Sophie Zhou</a> (Summer 2024)
+		<li><a href="https://www.linkedin.com/in/sophie-zhou-5025b8313/">Sophie Zhou</a> (Summer 2024, Cheyenne Mountain High School)
 		</li>
 		<li><a href="https://www.linkedin.com/in/sarthakjain101/">Sarthak Jain</a> (Summer 2022, Los Gatos High School; now undergrad at UIUC)
 		</li>
