--- a/publication.html
+++ b/publication.html
@@ -1527,6 +1527,17 @@ Pattern Recognition Letters, 2012
 
 <li>
 <div class="publication">
+<p> Sophie Zhou, Shu Kong, 
+	"<font color=#AF7817>Dare to Plagiarize? Plagiarized Painting Identification and Retrieval</font>", 
+	<em><a href="https://sites.google.com/view/avss2025-tw/ieee-avss?authuser=0">AVSS</a></em>, August 2025.
+<br>
+</p>
+</div>
+</li>
+	
+
+<li>
+<div class="publication">
 <p> A. Madan, N. Peri, S. Kong, D. Ramanan, 
 	"<font color=#AF7817>Revisiting Few-Shot Object Detection with Vision-Language Models</font>", 
 	<em><a href="https://sites.google.com/view/eval-fomo-24/home">ECCV 2024 Workshop EVAL-FoMo </a></em>, Milano, Italy, September 2024.
