--- a/publication.html
+++ b/publication.html
@@ -22,6 +22,7 @@
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
 			<a href="index.html" class="btn btn-default" role="button">Home</a>
 			<a href="publication.html" class="btn btn-default" role="button">Publication</a>
+			<a href="datasets.html" class="btn btn-default" role="button">Datasets</a>
 			<a href="group.html" class="btn btn-default" role="button">Group</a>
 			<a href="contact.html" class="btn btn-default" role="button">Contact</a>
     	</div>
