--- a/publication.html
+++ b/publication.html
@@ -71,18 +71,18 @@ Paleobiology, 2025
 
 <tr>
 <td width="35%" height=150>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1">
+<a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.70250">
 <img src="aimerykong_files/icon_newPhytologist202501.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1"><b>Pollen Morphology, Deep Learning, Phylogenetics, and the Evolution of Environmental Adaptations in Podocarpus</b></a>
+<a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.70250"><b>Pollen Morphology, Deep Learning, Phylogenetics, and the Evolution of Environmental Adaptations in Podocarpus</b></a>
 <br>
 M-E Adaimé, M. A. Urban,  S. Kong,  C. Jaramillo,  S. W. Punyasena
 <br>
 New Phytologist, 2025
 <br>
-[<a href="https://doi.org/10.1101/2025.01.07.631571">paper</a>]
+[<a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.70250">paper</a>]
 <br>
 </td>
 
@@ -1526,6 +1526,17 @@ Pattern Recognition Letters, 2012
 <ul>
 
 
+
+<li>
+<div class="publication">
+<p> Tian Liu, Huixin Zhang, Shubham Parashar, Shu Kong,
+	"<font color=#AF7817>Few-Shot Recognition via Stage-Wise Retrieval-Augmented Finetuning</font>", 
+	<em><a href="https://sites.google.com/view/avss2025-tw/ieee-avss?authuser=0">CVinW</a></em>, Juue 2025.
+<br>
+</p>
+</div>
+</li>
+	
 <li>
 <div class="publication">
 <p> Sophie Zhou, Shu Kong, 
