--- a/publication.html
+++ b/publication.html
@@ -1531,7 +1531,7 @@ Pattern Recognition Letters, 2012
 <div class="publication">
 <p> Tian Liu, Huixin Zhang, Shubham Parashar, Shu Kong,
 	"<font color=#AF7817>Few-Shot Recognition via Stage-Wise Retrieval-Augmented Finetuning</font>", 
-	<em><a href="https://sites.google.com/view/avss2025-tw/ieee-avss?authuser=0">CVinW</a></em>, Juue 2025.
+	<em><a href="https://computer-vision-in-the-wild.github.io/cvpr-2025/">CVinW</a></em>, Juue 2025.
 <br>
 </p>
 </div>
