--- a/publication.html
+++ b/publication.html
@@ -83,6 +83,8 @@ M-E Adaimé, M. A. Urban,  S. Kong,  C. Jaramillo,  S. W. Punyasena
 New Phytologist, 2025
 <br>
 [<a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.70250">paper</a>]
+[<a href="https://databank.illinois.edu/datasets/IDB-8817604">data</a>]
+[<a href="https://github.com/paleopollen/Novel_Pollen_Phylogenetic_Placement">code</a>]
 <br>
 </td>
 
