--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,28 @@
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://leowangtong.github.io/ALOR/">
+<img src="aimerykong_files/icon_ALOR" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://leowangtong.github.io/ALOR/"><b>Active Learning via Vision-Language Model Adaptation with Open Data</b></a>
+<br>
+T. Wang, J. Wang, S. Kong
+<br>
+arXiv:2506.01724, 2025
+<br>
+[<a href="https://arxiv.org/abs/2506.01724">paper</a>]
+[<a href="https://leowangtong.github.io/ALOR/">webpage</a>]
+[<a href="https://github.com/leowangtong/ALOR">code</a>]
+<br>
+</td>
+
+
+
+	
 
 <tr>
 <td width="35%" height=150>
@@ -53,7 +75,7 @@
 <td>
 <a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1"><b>Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</b></a>
 <br>
-J. T. Feng, S. P. Satheesan, S. Kong, T. H. Donders, and S. W. Punyasena
+J. T. Feng, S. P. Satheesan, S. Kong, T. H. Donders, S. W. Punyasena
 <br>
 Paleobiology, 2025
 <br>
