--- a/publication.html
+++ b/publication.html
@@ -234,7 +234,7 @@ Expert Systems with Applications, 2025<br>
 <a href="https://arxiv.org/abs/2312.14494"><b>Revisiting Few-Shot Object Detection with Vision-Language Models
 </b></a>
 <br>
-A. Madan<sup>*</sup>, N. Peri<sup>*</sup>, S. Kong<sup>#</sup>, D. Ramanan<sup>#</sup>
+A. Madan<sup>*</sup>, N. Peri<sup>*</sup>, D. Ramanan<sup>#</sup>, S. Kong<sup>#</sup>
 <br>
 In NeurIPS Datasets and Benchmarks, 2024<br>
 [<a href="https://arxiv.org/abs/2312.14494">paper</a>]
@@ -322,7 +322,7 @@ A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, 
 <td>
 <a href="https://arxiv.org/abs/2404.16972"><b>CriSp: Leveraging Tread Depth Maps for Enhanced Crime-Scene Shoeprint Matching</b></a>
 <br>
-S. Shafique, S. Kong<sup>*</sup>, C. Fowlkes<sup>*</sup>
+S. Shafique, C. Fowlkes<sup>*</sup>, S. Kong<sup>*</sup>
 <br>
 In ECCV, 2024<br>
 [<a href="https://github.com/Samia067/CriSp">webpage</a>]
