--- a/publication.html
+++ b/publication.html
@@ -46,7 +46,7 @@
 <tr>
 <td width="35%" height=150>
 <a href="https://leowangtong.github.io/ALOR/">
-<img src="aimerykong_files/icon_ALOR" height="120"  border="0">
+<img src="aimerykong_files/icon_ALOR.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
