--- a/publication.html
+++ b/publication.html
@@ -168,19 +168,17 @@ In <a href="https://cvpr.thecvf.com/">CVPR</a>, 2025<br>
 
 <tr>
 <td width="35%" height=150>
-<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39">
+<a href="http://dx.doi.org/10.1117/12.3050847">
 <img src="aimerykong_files/SPIE_DCTO2025_thumbnail.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39"><b>Automated Identification of Repeated Chip Layout Patterns</b></a>
+<a href="http://dx.doi.org/10.1117/12.3050847"><b>Automated Identification of Repeated Chip Layout Patterns</b></a>
 <br>
 R. Wang, S. Kong, L. Wang, Y. Wang, J. Hu
 <br>
 In DTCO and Computational Patterning, 2025  (<font color=ff3399>oral presentation</font>)<br>
-[<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39">paper</a>]
-[code]
-[data]
+[<a href="http://dx.doi.org/10.1117/12.3050847">paper</a>]
 <br>
 </td>
 
