--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,32 @@
 
 
 
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2506.02914">
+<img src="aimerykong_files/icon_AnnoGuide.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2506.02914"><b>Active Learning via Vision-Language Model Adaptation with Open Data</b></a>
+<br>
+Y. Ma, W. Hua, S. Kong
+<br>
+arXiv:2506.02914, 2025
+<br>
+[<a href="https://arxiv.org/abs/2506.02914">paper</a>]
+[<a href="https://github.com/annoguide/annoguide3Dbenchmark">code</a>]
+<br>
+</td>
+
+
+	
+
 <tr>
 <td width="35%" height=150>
 <a href="https://leowangtong.github.io/ALOR/">
