--- a/publication.html
+++ b/publication.html
@@ -55,7 +55,7 @@
 </a><br>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2506.02914"><b>Active Learning via Vision-Language Model Adaptation with Open Data</b></a>
+<a href="https://arxiv.org/abs/2506.02914"><b>Towards Auto-Annotation from Annotation Guidelines: A Benchmark through 3D LiDAR Detection</b></a>
 <br>
 Y. Ma, W. Hua, S. Kong
 <br>
