--- a/group.html
+++ b/group.html
@@ -35,32 +35,31 @@
 	<ul>
 		
 		<li><a href="https://tian1327.github.io/">Tian Liu</a> (PhD at TAMU)</li>
-		<li><a href="https://scholar.google.com/citations?user=eJ9-T9sAAAAJ&hl=zh-CN">Tong Wang</a> (PhD at UMacau)</li>
-		<li><a href="https://openreview.net/profile?id=~Hanxin_Wang2">Hanxin Wang</a> (PhD at UMacau)</li>
+		<li><a href="https://leowangtong.github.io">Tong Wang</a> (PhD at UMacau)</li>
+		<li><a href="https://hannawang09.github.io/">Hanxin Wang</a> (PhD at UMacau)</li>
 		<li><a href="./">Di Wu</a> (PhD at UMacau)</li>
-		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>		
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
-		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
+		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>		
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://www.linkedin.com/in/runzhi-wang/">Runzhi Wang</a> (PhD at TAMU, co-adivsed by Jiang Hu)</li>
 		<li><a href="./">Anwesha Basu</a> (MS at TAMU)</li>
 		<li><a href="./">Kitty Kaiqi Su</a> (MS at UMacau)</li>	
 		<li><a href="./">Hou Un Lei</a> (MS at UMacau)</li>
-		<li><a href="./">Garfield Siyun Ke</a> (MS at UMacau)</li>
-		<li><a href="https://ezharjan.github.io/">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>		
+		<li><a href="./">Garfield Siyun Ke</a> (MS at UMacau, co-advised by Joseph Dexter)</li>
 		
-
 		<br>
+		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="https://openreview.net/profile?id=~Huixin_Zhang1">Huixin Zhang</a> (PhD at TAMU)</li>
-		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU,  co-advised by Reza Langari)</li>
+		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU, co-advised by Reza Langari)</li>
 		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU, now Research Scientist at Meta)</li>
 		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena; now Research Fellow at Smithsonian Institution)</li>		
 		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan)</li>
 		<li><a href="https://shubhamprshr27.github.io/">Shubham Parashar</a> (MS at TAMU; now PhD student at TAMU)</li>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
-		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes; now at Google)</li>
+		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes; now at Deepmind)</li>
 		<li><a href="https://scholar.google.com/citations?user=fHWXpq4AAAAJ&hl=en">Jacob Fang</a> (PhD at ASU, now at Amazon Alexa AI)</li>
+		<li><a href="https://ezharjan.github.io/">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>		
 		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master at UIUC, co-advised by Surangi Punyasena; now PhD at UPenn)</li>
 		<li><a href="https://aimerykong.github.io/group.html">Satish Reddy</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="https://aimerykong.github.io/group.html">Shubham Gupta</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
