--- a/publication.html
+++ b/publication.html
@@ -45,6 +45,25 @@
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2506.04713">
+<img src="aimerykong_files/icon_AnnoGuide.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2506.04713"><b>Robust Few-Shot Vision-Language Model Adaptation</b></a>
+<br>
+H. Wang, T. Liu, S. Kong
+<br>
+arXiv:2506.04713, 2025
+<br>
+[<a href="https://arxiv.org/abs/2506.04713">paper</a>]
+[<a href="https://hannawang09.github.io/projects/srapf/">webpage</a>]
+[<a href="https://github.com/hannawang09/SRAPF">code</a>]
+<br>
+</td>
+
 
 
 
