--- a/group.html
+++ b/group.html
@@ -78,6 +78,8 @@
 <h4>Undergraduate Students</h4>
 	<ul>
 		<li><a href="https://www.linkedin.com/in/joanneliu88/">Joanne Liu</a> (TAMU, co-advised by Jeeeun Kim)</li>
+		<li>Yanan Bu (UMacau)</li>
+		<li>Runxin Liu (UMacau)</li>
 		<li>Yupeng Tong (UMacau)</li>
 		<li><a href="https://yogerchen.github.io/">Yoger Un Lok Chen</a> (UMacau; now MS student at Tsinghua)</li>
 		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
