--- a/group.html
+++ b/group.html
@@ -37,7 +37,7 @@
 		<li><a href="https://tian1327.github.io/">Tian Liu</a> (PhD at TAMU)</li>
 		<li><a href="https://leowangtong.github.io">Tong Wang</a> (PhD at UMacau)</li>
 		<li><a href="https://hannawang09.github.io/">Hanxin Wang</a> (PhD at UMacau)</li>
-		<li><a href="./">Di Wu</a> (PhD at UMacau)</li>
+		<li><a href="https://diwu96063.github.io/">Di Wu</a> (PhD at UMacau)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>		
 		<li><a href="./">Anwesha Basu</a> (MS at TAMU)</li>
