--- a/publication.html
+++ b/publication.html
@@ -44,6 +44,55 @@
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="./">
+<img src="img2/icon_BPT.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>Attention to Burstiness: Low-Rank Bilinear Prompt Tuning</b></a>
+<br>
+Y. Wang, M. Duan, S. Kong
+<br>
+ICCV, 2025
+<br>
+[<a href="./">paper to appear</a>]
+[<a href="./">webpage</a>]
+[<a href="./">code</a>]
+<br>
+</td>
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="./">
+<img src="img2/icon_BiCD.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>Information-Bottleneck Driven Binary Neural Network for Change Detection</b></a>
+<br>
+K. Yin, Z. Zhang, S. Kong, T. Gao, C-Z Xu, H. Kong
+<br>
+ICCV, 2025
+<br>
+[<a href="./">paper to appear</a>]
+[<a href="./">webpage</a>]
+[<a href="./">code</a>]
+<br>
+</td>
+
+
+
+
+
+
+
+	
 
 <tr>
 <td width="35%" height=150>
