--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 		
 
-<h3 style="font-size:20px;font-family:Times"><font color="red">Call for Participation</font></h3>
+<!--h3 style="font-size:20px;font-family:Times"><font color="red">Call for Participation</font></h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
 	<a href="https://eval.ai/web/challenges/challenge-page/2459/overview"  target="_blank">The 2nd Challenge of Foundational Few-Shot Object Detection @ VPLOW jointly with CVPR'25</a>
@@ -100,7 +100,7 @@
 	<li>
 	<a href="https://eval.ai/web/challenges/challenge-page/2478/overview"  target="_blank">The 2nd Challenge of Object Instance Detection @ VPLOW jointly with CVPR'25</a>
 	</li>
-</ul>
+	</ul-->
 
 		
 <h3 style="font-size:20px;font-family:Times">Links</h3>
