--- a/publication.html
+++ b/publication.html
@@ -57,9 +57,9 @@ Y. Wang, M. Duan, S. Kong
 <br>
 ICCV, 2025
 <br>
-[<a href="./">paper to appear</a>]
-[<a href="./">webpage</a>]
-[<a href="./">code</a>]
+[<a href="https://arxiv.org/abs/2506.22908">paper</a>]
+[<a href="https://github.com/WangYZ1608/BPT">webpage</a>]
+[<a href="https://github.com/WangYZ1608/BPT">code</a>]
 <br>
 </td>
 
