--- a/publication.html
+++ b/publication.html
@@ -46,12 +46,12 @@
 
 <tr>
 <td width="35%" height=150>
-<a href="./">
+<a href="https://github.com/WangYZ1608/BPT">
 <img src="img2/icon_BPT.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="./"><b>Attention to Burstiness: Low-Rank Bilinear Prompt Tuning</b></a>
+<a href="https://github.com/WangYZ1608/BPT"><b>Attention to Burstiness: Low-Rank Bilinear Prompt Tuning</b></a>
 <br>
 Y. Wang, M. Duan, S. Kong
 <br>
@@ -81,14 +81,32 @@ K. Yin, Z. Zhang, S. Kong, T. Gao, C-Z Xu, H. Kong
 ICCV, 2025
 <br>
 [<a href="./">paper to appear</a>]
-[<a href="./">webpage</a>]
-[<a href="./">code</a>]
+[<a href="./">webpage to construct</a>]
+[<a href="./">code to release</a>]
 <br>
 </td>
 
 
 
 
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2506.23132">
+<img src="img2/icon_dare-to-plagiarize.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2506.23132"><b>Dare to Plagiarize? Plagiarized Painting Recognition and Retrieval</b></a>
+<br>
+S. Zhou, S. Kong
+<br>
+AVSS, 2025
+<br>
+[<a href="https://arxiv.org/abs/2506.23132">paper</a>]
+<br>
+</td>
 
 
 
