--- a/index.html
+++ b/index.html
@@ -180,6 +180,36 @@
 <ul style="font-size:15px;font-family:Times;line-height:20px">
 
 
+
+<li>
+<p>
+Congratulations to  <a href="https://github.com/WangYZ1608/BPT"  target="_blank">Yuzhu</a> on the <a href="https://iccv.thecvf.com/"  target="_blank">ICCV'25
+<img src="./img2/icon_ICCV2025.jpg", height="25"></a> 
+	paper "<a href="https://arxiv.org/abs/2506.22908"  target="_blank">Attention to Burstiness: Low-Rank Bilinear Prompt Tuning</a>"! (6/30/2025)
+</a>
+</li>
+
+	
+<li>
+<p>
+Congratulations to  <a href="https://scholar.google.com/citations?user=cWbH3zMAAAAJ&hl=en"  target="_blank">Kaijie</a> on the <a href="https://iccv.thecvf.com/"  target="_blank">ICCV'25
+<img src="./img2/icon_ICCV2025.jpg", height="25"></a> 
+	paper "Information-Bottleneck Driven Binary Neural Network for Change Detection"! (6/30/2025)
+</a>
+</li>
+
+
+
+<li>
+<p>
+Congratulations to  <a href="https://www.linkedin.com/in/sophie-zhou-5025b8313"  target="_blank">Sophie</a> on the <a href="https://sites.google.com/view/avss2025-tw/ieee-avss?authuser=0"  target="_blank">AVSS'25
+<img src="./img2/icon_AVSS2025.jpg", height="25"></a> 
+	paper "Dare to Plagiarize? Plagiarized Painting Recognition and Retrieval"! (6/30/2025)
+</a>
+</li>
+
+	
+
 <li>
 <p>
 Congratulations to <a href="https://anthropology.sas.upenn.edu/people/jennifer-feng/">Jennifer</a> on the <a href="https://www.cambridge.org/core/journals/paleobiology"  target="_blank">Paleobiology
