--- a/publication.html
+++ b/publication.html
@@ -80,9 +80,8 @@ K. Yin, Z. Zhang, S. Kong, T. Gao, C-Z Xu, H. Kong
 <br>
 ICCV, 2025
 <br>
-[<a href="./">paper to appear</a>]
-[<a href="./">webpage to construct</a>]
-[<a href="./">code to release</a>]
+[paper to appear]
+[code to release]
 <br>
 </td>
 
