--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	
 	<p style="font-size:16px;font-family:Times">
 		My research lies in <strong>Computer Vision</strong> and its interactions with other fields (e.g., ML, NLP, HCI, robotics, and graphics), broad
-		applications (e.g., AR/VR, autonomous driving, etc.), and diverse disciplines (e.g., biology, paleoecology, psychology, special education, etc.). 
+		applications (e.g., AR/VR, autonomous driving, etc.), and diverse disciplines (e.g., biology and paleoecology). 
 		My current research focuses on <a href="https://vplow.github.io"  target="_blank"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
 		My previous paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939"  target="_blank">Best Paper / Marr Prize at ICCV 2021</a>.
 		My previous work that applied AI to interdisciplinary research built a high-throughput pollen analysis system,
@@ -194,7 +194,7 @@ Congratulations to  <a href="https://github.com/WangYZ1608/BPT"  target="_blank"
 <p>
 Congratulations to  <a href="https://scholar.google.com/citations?user=cWbH3zMAAAAJ&hl=en"  target="_blank">Kaijie</a> on the <a href="https://iccv.thecvf.com/"  target="_blank">ICCV'25
 <img src="./img2/icon_ICCV2025.jpg", height="25"></a> 
-	paper "Information-Bottleneck Driven Binary Neural Network for Change Detection"! (6/30/2025)
+	paper "<a href="https://arxiv.org/abs/2507.03504">Information-Bottleneck Driven Binary Neural Network for Change Detection</a>"! (6/30/2025)
 </a>
 </li>
 
@@ -204,7 +204,7 @@ Congratulations to  <a href="https://scholar.google.com/citations?user=cWbH3zMAA
 <p>
 Congratulations to  <a href="https://www.linkedin.com/in/sophie-zhou-5025b8313"  target="_blank">Sophie</a> on the <a href="https://sites.google.com/view/avss2025-tw/ieee-avss?authuser=0"  target="_blank">AVSS'25
 <img src="./img2/icon_AVSS2025.jpg", height="25"></a> 
-	paper "Dare to Plagiarize? Plagiarized Painting Recognition and Retrieval"! (6/30/2025)
+	paper "<a href="https://arxiv.org/abs/2506.23132">Dare to Plagiarize? Plagiarized Painting Recognition and Retrieval</a>"! (6/30/2025)
 </a>
 </li>
 
