--- a/publication.html
+++ b/publication.html
@@ -16,7 +16,7 @@
 
 	<div class="my-container">
 		<h1> Shu Kong | Computer Vision Lab </h1>
-		<span>research in computer vision, machine learning, robotics, NLP, HCI, graphics, interdisciplinary research (e.g., plant biology, paleoecology, and special education.)</span>
+		<span>research in computer vision, machine learning, robotics, NLP, HCI, graphics, interdisciplinary research (e.g., plant biology and paleoecology)</span>
 		<!--span>research in computer vision and its interactions with other fields (e.g.,machine learning, robotics, NLP, HCI, and graphics), applications(e.g., AR/VR, self-driving, etc.)  and other interdisciplines (e.g., biology, paleoecology, psychology, special education, etc.) </span-->
 		
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
@@ -80,7 +80,7 @@ K. Yin, Z. Zhang, S. Kong, T. Gao, C-Z Xu, H. Kong
 <br>
 ICCV, 2025
 <br>
-[paper to appear]
+[<a href="https://arxiv.org/abs/2507.03504">paper</a>]
 [code to release]
 <br>
 </td>
