--- a/group.html
+++ b/group.html
@@ -16,7 +16,7 @@
 
 	<div class="my-container">
 		<h1> Shu Kong | Computer Vision Lab </h1>
-		<span>research in computer vision, machine learning, robotics, NLP, HCI, graphics, interdisciplinary research (e.g., plant biology, paleoecology, and special education.)</span>
+		<span>research in computer vision, machine learning, robotics, NLP, HCI, graphics, interdisciplinary research (e.g., plant biology and paleoecology)</span>
 		<!--span>research in computer vision and its interactions with other fields (e.g.,machine learning, robotics, NLP, HCI, and graphics), applications(e.g., AR/VR, self-driving, etc.)  and other interdisciplines (e.g., biology, paleoecology, psychology, special education, etc.) </span-->
 		
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
