--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	
 	<p style="font-size:16px;font-family:Times">
 		My research lies in <strong>Computer Vision</strong> and its interactions with other fields (e.g., ML, NLP, HCI, robotics, and graphics), broad
-		applications (e.g., AR/VR, autonomous driving, etc.), and diverse disciplines (e.g., biology and paleoecology). 
+		applications (e.g., AR/VR and autonomous driving), and diverse disciplines (e.g., biology and paleoecology). 
 		My current research focuses on <a href="https://vplow.github.io"  target="_blank"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
 		My previous paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939"  target="_blank">Best Paper / Marr Prize at ICCV 2021</a>.
 		My previous work that applied AI to interdisciplinary research built a high-throughput pollen analysis system,
