--- a/publication.html
+++ b/publication.html
@@ -69,12 +69,12 @@ ICCV, 2025
 
 <tr>
 <td width="35%" height=150>
-<a href="./">
+<a href="https://arxiv.org/abs/2507.03504">
 <img src="img2/icon_BiCD.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="./"><b>Information-Bottleneck Driven Binary Neural Network for Change Detection</b></a>
+<a href="https://arxiv.org/abs/2507.03504"><b>Information-Bottleneck Driven Binary Neural Network for Change Detection</b></a>
 <br>
 K. Yin, Z. Zhang, S. Kong, T. Gao, C-Z Xu, H. Kong
 <br>
