--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
-		[CISC3011] CISC3011 Digital Image Processing [<a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">syllabus</a>] (Fall 2025, UMacau)
+		[CISC3011] Digital Image Processing [<a href="./aimerykong_files/2025-1-CISC3011-Digital-Image-Processing.pdf"  target="_blank">syllabus</a>] (Fall 2025, UMacau)
 	</li>
 	<li>
 		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2024-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf"  target="_blank">syllabus</a>] (Spring 2025, UMacau)
