--- a/group.html
+++ b/group.html
@@ -54,27 +54,27 @@
 		<li><a href="https://openreview.net/profile?id=~Huixin_Zhang1">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://www.linkedin.com/in/runzhi-wang/">Runzhi Wang</a> (PhD at TAMU, co-adivsed by Jiang Hu)</li>
-		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
+		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang; now PhD in UIUC)</li>
 		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU, co-advised by Reza Langari)</li>						
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
-		<li><a href="https://ezharjan.github.io/">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>
+		<li><a href="https://ezharjan.github.io/">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu; now PhD at GWU)</li>
 		<li><a href="https://shubhamprshr27.github.io/">Shubham Parashar</a> (MS at TAMU; now PhD student at TAMU)</li>	
 		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master at UIUC, co-advised by Surangi Punyasena; now PhD at UPenn)</li>
 		<li><a href="https://scholar.google.com/citations?user=asHobe0AAAAJ&hl=en">Jia Shi</a> (MSCV at CMU; now at Waymo)</li>
 		
 		<li><a href="https://g-meghana-reddy.github.io/">Meghana Reddy Ganesina</a> (MSCV at CMU; now at Zoox)</li>
-		<li><a href="https://anirudh-chakravarthy.github.io/">Anirudh S Chakravarthy</a> (MSCV at CMU; now at Cruise)</li>
+		<li><a href="https://anirudh-chakravarthy.github.io/">Anirudh S Chakravarthy</a> (MSCV at CMU; now at Amazon)</li>
 		<li><a href="https://jamie725.github.io/website/index.html">Yi-Ting Chen</a> (MSCV at CMU, now PhD at UMD)</li>
 		<li><a href="https://derrickwanglf.github.io/">Linfeng Wang</a> (Master at UCI, now at Microsoft)</li>
 		<li><a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">Jinghao Shi</a> (MSCV at CMU, now at TikTok)</li>
 		<li><a href="https://www.linkedin.com/in/zelinye/">Zelin Ye</a> (Master at CMU; now Engineer at CMU)</li>
 		<li><a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">Jeet Kanjani</a> (MSCV at CMU, now at Amazon)</li>
 		<li><a href="https://www.linkedin.com/in/shubham-gupta94/">Shubham Gupta</a> (MSCV at CMU, now at Apple)</li>
-		<li><a href="https://cathalye.github.io/">Chinmayee Athalye</a> (MS at UCI, now at UPenn)</li>
-				
+		<li><a href="https://cathalye.github.io/">Chinmayee Athalye</a> (MS at UCI, now PhD at UPenn)</li>
+		
 		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan)</li>		
-		<li><a href="https://aimerykong.github.io/group.html">Satish Reddy</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
-		<li><a href="https://aimerykong.github.io/group.html">Shubham Gupta</a> (Master at TAMU, co-advised by Ruihong Huang)</li>		
+		<li><a href="https://aimerykong.github.io/group.html">Satish Reddy</a> (Master at TAMU, co-advised by Ruihong Huang; now at Tesla)</li>
+		<li><a href="https://aimerykong.github.io/group.html">Shubham Gupta</a> (Master at TAMU, co-advised by Ruihong Huang; now at Amazon)</li>	
 	</ul>
 	
 <h4>Undergraduate Students</h4>
@@ -90,11 +90,13 @@
 		<li>Louise Ruoxuan Li (UMacau)</li>
 		<li><a href="https://shadealsha.github.io/">Shaden Alshammari</a> (RISS Fellow at CMU-RI, home institute MIT; now MS student at MIT)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (RISS Fellow at CMU-RI, home institute UMD; now PhD at CMU)</li>
+		<li><a href="https://aimerykong.github.io/group.html">Jasmine Mou</a> (BS at UCI, co-advised by Charless Fowlkes; now at ByteDance)</li>		
+
 	</ul>
 	
 <h4>High-School Students</h4>
 	<ul>
-		<li><a href="https://www.linkedin.com/in/sophie-zhou-5025b8313/">Sophie Zhou</a> (Summer 2024, Cheyenne Mountain High School)
+		<li><a href="https://www.linkedin.com/in/sophie-zhou-5025b8313/">Sophie Zhou</a> (Summer 2024, Cheyenne Mountain High School; Summer Scholar in the Wharton School of UPenn and Jerome Fisher M&T program)
 		</li>
 		<li><a href="https://www.linkedin.com/in/sarthakjain101/">Sarthak Jain</a> (Summer 2022, Los Gatos High School; now undergrad at UIUC)
 		</li>
